--- a/html and css project/TRIBUTE PAGE/style.css
+++ b/html and css project/TRIBUTE PAGE/style.css
@@ -1,54 +1,65 @@
-body{
+body {
     margin: 0;
     background-color: black;
-    color: rgb(255, 255, 255);
+    color: white;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header{
+header {
     font-size: 15px;
     text-align: center;
     padding: 10px;
 }
 
-.Biography img{
-    padding: 10px 100px 30px 100px;
+.biopic-container {
+    display: flex;
+    justify-content: center; /* Center the image horizontally */
+    padding: 20px 0;
+}
+
+#biopic {
     width: 100%;
     max-width: 1000px;
     height: 400px;
     object-fit: cover;
 }
 
-.content, .Achievements, .Quotes, .Timeline, .Legacy, .Resources{
-    width: 61%;
-    margin: 0px auto;
+.content, .Achievements, .Quotes, .Timeline, .Legacy, .Resources {
+    width: 70%; /* More space for content */
+    margin: 0 auto;
     line-height: 1.5;
-    padding: 15px 0px;
+    padding: 15px 0;
 }
 
-blockquote{
+blockquote {
     font-style: italic;
 }
 
-.Gallery{
-    width: 62%;
+.gallery {
+    width: 70%; /* Adjust width */
+    margin: 0 auto;
+    padding: 20px 0;
 }
-.container{
+
+.container {
     display: flex;
+    justify-content: space-between; /* Ensure spacing between images */
+    align-items: center;
+    padding: 20px 0;
 }
 
-.container, .gallery-text{
-    align-content: center;
-    font-size: larger;
-}
-.container img{
+.container img {
     object-fit: cover;
-    width: 500px;
-    left: 0;
+    width: 300px; /* Resize images for better fit */
 }
 
-.Resources a:hover{
+.gallery-text {
+    text-align: center;
+    font-size: 1.2rem;
+    margin-top: 10px;
+}
+
+.Resources a:hover {
     border-bottom: 2px solid;
 }
-
