--- a/html and css project/FORM PAGE/style.css
+++ b/html and css project/FORM PAGE/style.css
@@ -5,5 +5,86 @@
 
 main{
     width: 100%;
-    background-image: linear-gradient(to top,rgba(0,0,0,0.5));
+    background: linear-gradient(to top,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url(https://i.postimg.cc/YqFd6KWs/1.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+}
+
+nav{
+    width: 100%;
+    height: 75px;
+}
+
+.icon{
+    width: 200px;
+    float: left;
+    height: 70px;
+}
+
+.logo{
+    color: orangered;
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 0px 0px 20px;
+    float: left;
+}
+
+.menu{
+    width: 900PX;
+    float: left;
+    height: 70px;
+    padding: 20px;
+}
+
+.menu ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.menu li{
+    list-style: none;
+    font-size: 25px;
+}
+
+.menu a{
+    color: aliceblue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    transition: 0.3s ease-in-out;
+}
+
+.menu a:hover{
+    color: orangered;
+    border-bottom: 2px solid orangered;
+}
+
+.search-container{
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    padding: 15px;
+}
+
+.search{
+    padding: 8px 20px;
+    background: none;
+    color: aliceblue;
+    border: 2px solid rgb(223, 76, 23);
+    border-radius:7px 0px 0px 7px ;
+}
+
+.btn{
+    padding: 10px 30px;
+    color: aliceblue;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: orangered;
+    border: none;
+    border-radius:0px 7px 7px 0px ;
+}
+
+.search:focus{
+    outline: none;
 }
