--- a/html and css project/portfolio/style.css
+++ b/html and css project/portfolio/style.css
@@ -26,6 +26,7 @@ body{
     color: var(--text-color);
 }
 
+/*  nav bar pg */
 .header{
     position: fixed;
     top: 0;
@@ -76,6 +77,8 @@ body{
     color: var(--main-color);
     display: none;
 }
+
+/* home pg */
 
 section{
     min-height: 100vh;
@@ -204,7 +207,126 @@ span{
 }
 
 .text-animation{
-    font-size: 3.5rem;
+    font-size: 3.5rem;  /* i changed the value and unit form 34px*/
     font-weight: 600;
     min-width: 280px;
+}
+
+.text-animation span{
+    position: relative;
+}
+
+.text-animation span::before{
+    content: "Frontend Developer";
+    color: var(--main-color);
+    animation: words 20s infinite;
+}
+
+.text-animation span::after{
+    content: "";
+    background-color: var(--bg-color);
+    position: absolute;
+    width: calc(100% + 8px);
+    height: 100%;
+    border-left: 3px solid var(--bg-color);
+    right: -8px;
+    animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
+}
+
+@keyframes cursor{
+    to{
+        border-left: 2px solid var(--main-color);
+    }
+}
+
+@keyframes word{
+    0%,
+    20%{
+        content: "Frontend Designer";
+    }
+    21%,
+    40%{
+        content: "Web Developer";
+    }
+    41%,
+    60%{
+        content: "Web Designer";
+    }
+    61%,
+    80%{
+        content: "React Developer";
+    }
+    81%,
+    100%{
+        content: "Frontend Engineer";
+    }
+}
+
+@keyframes typing{
+    10%,
+    15%,
+    30%,
+    35%,
+    50%,
+    55%,
+    70%,
+    90%,
+    95%{
+        width: 0;
+    }
+    5%,
+    20%,
+    25%,
+    40%,
+    45%,
+    60%,
+    65%,
+    80%,
+    85%{
+        width: calc(100% + 8px);
+    }
+}
+
+/* next menu pg education*/
+
+.heading{
+    font-size: 8rem;
+    text-align: center;
+    margin: 5rem 0;
+}
+
+.education{
+    padding: 100px 15px;
+    background: var(--second-bg-color);
+}
+
+.education h2{
+    margin-bottom: 5rem;
+}
+
+.timeline-items{
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+}
+
+.timeline-items::before{
+    content: "";
+    position:absolute;
+    width: 5px;
+    height: 100%;
+    background-color: var(--main-color);
+    left: calc(50% - 1px);
+}
+
+.timeline-item{
+    margin-bottom: 40px;
+    width: 100%;
+    position: relative;
+}
+
+.timeline-item:last-child{
+    margin-bottom: 0;
 }
