--- a/html and css project/portfolio/style.css
+++ b/html and css project/portfolio/style.css
@@ -8,7 +8,9 @@
     scroll-behavior: smooth;
     font-family: "poppins",sans-serif;
 }
-
+body{
+    overflow-x: hidden;
+}
 :root{
     --bg-color: #080808;
     --second-bg-color:#131313;
