--- a/js project/calculator/style.css
+++ b/js project/calculator/style.css
@@ -11,7 +11,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: hsl(0, 0%, 15%);
     border-radius: 15px;
-    max-width: 500px;
+    max-width: 440px;
     overflow: hidden;
 }
 
@@ -49,4 +49,16 @@ button:hover{
 }
 button:active{
     background-color: hsl(0, 0%, 50%);
+}
+
+.operator-btn{
+    background-color: hsl(32, 100%, 50%);
+}
+
+.operator-btn:hover{
+    background-color: hsl(32, 100%, 60%);
+}
+
+.operator-btn:active{
+    background-color: hsl(32, 100%, 65%);
 }
