--- a/html and css project/youtube/index.css
+++ b/html and css project/youtube/index.css
@@ -30,8 +30,10 @@ nav{
 }
 .text_card{
     display: inline-block;
-    line-height: 20px;
+    line-height: 17px;
     margin-left: 10px;
+    font-size: 12px;
+    font-family: Roboto;
 }
 .thumbnail{
     width: 300px;
@@ -45,6 +47,10 @@ nav{
 }
 
 .name{
-    margin-top: 10px;
+    margin-top: 7px;
+    color: rgb(96, 96, 96);
 }
 
+.info{
+    color: rgb(96, 96, 96);
+}
