--- a/html and css project/youtube/index.css
+++ b/html and css project/youtube/index.css
@@ -21,16 +21,15 @@ nav{
 main{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px 15px;
 }
 
-.card{
-    width:300px;
-    margin: 0px 10px 10px 0px;
-}
+
 
 .inner_card{
     display: grid;
     grid-template-columns: 50px 1fr;
+    column-gap: 5px;
     margin: 5px 0px 0px 0px;
 }
 .text_card{
@@ -39,13 +38,13 @@ main{
     font-family: Roboto;
 }
 .thumbnail{
-    width: 300px;
+    width: 100%;
 }
 
 .pic{
     border-radius: 36px;
-    width: 36px;
-    object-fit: contain;
+    width: 50px;
+    object-fit: contain; 
 }
 
 .name{
