--- a/html and css project/youtube/index.css
+++ b/html and css project/youtube/index.css
@@ -160,6 +160,11 @@ a{
     color: black;
 }
 
+@media (max-width: 550px){
+    main{
+        grid-template-columns: 1fr;
+    }
+}
 @media (max-width: 750px){
     main{
     grid-template-columns: 1fr 1fr;
